@@ -1,7 +1,11 @@
-2014-06-26  Uwe Schulzweida
+2014-06-30  Uwe Schulzweida
 
 	* using CDI library version 1.6.4
 	* Version 1.6.4 released
+
+2014-06-30  Uwe Schulzweida
+
+	* Selbox: angle of rotated grid missing (bug fix)
 
 2014-06-19  Uwe Schulzweida
 
